# httq-protocol

./: .gitignore  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DEPLOY_README.md  FINAL_DELIVERY.md  LICENSE  LINKS_FIXED.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  SUCCESS.md  deploy.sh  package.json
.github/workflows/: deploy.yml
docs/: BROWSER_EXTENSION.md  CLOUD_INTEGRATION.md  GITHUB_ACTIONS.md  GITHUB_PAGES_DEPLOY.md  INDEX.md  MIGRATION.md  PROTOCOL.md  SDK_DOCUMENTATION.md
extensions/chrome/: background.js  manifest.json
sdks/go/: httq.go
sdks/python/httq/: __init__.py
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
src/: index.js
src/crypto/: httq-lattice.js
src/demo/public/: app.js  index.html  styles.css
src/protocol/: handshake.js  session.js
src/server/: demo-server.js
